fixed search field width on smaller screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -187,6 +187,12 @@ nav ul a, .info h1 a {
             float:right;
         }
     }
+    
+    #search-container {
+        input {
+            padding: 0.4em 1em;
+        }
+    }
     /*article.shorttorch {
         a img {
             width:300px;
